--- a/data_migration/i18n/it.po
+++ b/data_migration/i18n/it.po
@@ -82,7 +82,7 @@ msgstr "encoding sconosciuto"
 #: code:addons/data_migration/utils/inventory_importer.py:119
 #, python-format
 msgid "Inventory of {date} on location {location}"
-msgstr "Iventario al {date} per la locazione {location}"
+msgstr "Inventario al {date} per la locazione {location}"
 
 #. module: data_migration
 #: model:ir.actions.act_window,name:data_migration.product_file_import
