--- a/sale_order_price_recalculation/i18n/it.po
+++ b/sale_order_price_recalculation/i18n/it.po
@@ -14,3 +14,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+
+#. module: sale_order_price_recalculation
+#: field:sale.order,recalculate_prices:0
+msgid "Recalculate Prices"
+msgstr "Ricalcola prezzi"
+
+#. module: sale_order_price_recalculation
+#: view:sale.order:0
+msgid "Recalculate prices No Discount"
+msgstr "Ricalcola prezzi senza sconto"
