--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -1015,3 +1015,8 @@ msgstr "Utenti Validazione"
 #: view:sale.shop:0
 msgid "Validation"
 msgstr "Validazione"
+
+#. module: sale_order_confirm
+#: field:res.company,enable_discount_validation:0
+msgid "Enable Discount Verify"
+msgstr "Abilita verifica sullo sconto"
