--- a/dt_price_security/i18n/it.po
+++ b/dt_price_security/i18n/it.po
@@ -165,3 +165,9 @@ msgstr "Linea d'ordine di vendita"
 #, python-format
 msgid "Discount out of range"
 msgstr "Sconto non consentito"
+
+#. module: price_security
+#: view:res.users:0
+#: field:res.users,discount_restriction_ids:0
+msgid "Discount Restrictions"
+msgstr "Restrizione Sconto"
