Now get an axception if try to delete product with bom

--- a/product_bom/i18n/it.po
+++ b/product_bom/i18n/it.po
@@ -217,3 +217,15 @@ msgstr "Prodotto / Può vedere le disponibilità"
 #: field:product.product,date_inventory:0
 msgid "Date Inventory"
 msgstr "Disponibilità al"
+
+#. module: product_bom
+#: code:addons/product_bom/product.py:503
+#, python-format
+msgid "The product is used on same Sale Order, deactivate it"
+msgstr "Il prodotto è usato in qualche Ordine di Vendita, potete deattivarlo"
+
+#. module: product_bom
+#: code:addons/product_bom/product.py:503
+#, python-format
+msgid "The product is used on same BOM, deactivate it"
+msgstr "Il prodotto è usato in qualche Distinta Base, potete deattivarlo"
