Add traslation, also now is possible to change routing directly from production order, fix error on internal note on Board

--- a/sale_order_requirement/i18n/it.po
+++ b/sale_order_requirement/i18n/it.po
@@ -499,7 +499,7 @@ msgstr "Utente"
 #. module: sale_order_requirement
 #: view:order.requirement:0
 msgid "To Deploy"
-msgstr "To Deploy"
+msgstr "Da Sviluppare"
 
 #. module: sale_order_requirement
 #: view:order.requirement:0
